Prod/src/objects/SST_Onboarding__c.object
<CustomObject>
    <description>https://jira.avalara.com/browse/ITBSE-1469
To save customer response for SST</description>
    <fields>
        <fullName>AF_SST_Identification_Number__c</fullName>
        <label>AF SST Identification Number</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Affiliate_Company_Name__c</fullName>
        <label>Affiliate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_a_remote_seller_in_this_state__c</fullName>
        <label>Are you a remote seller in this state?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>North Dakota</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Rhode Island</fullName>
                </value>
                <value>
                    <fullName>South Dakota</fullName>
                </value>
                <value>
                    <fullName>Tennessee</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Vermont</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>West Virginia</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
                <value>
                    <fullName>Wyoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArkansasSSTVolunteer__c</fullName>
        <label>Arkansas SST Volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arkansas_Filing_Frequency__c</fullName>
        <label>Arkansas Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arkansas_NV_Reason__c</fullName>
        <label>Arkansas NV Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ArkansasSSTVolunteer__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arkansas_Remote__c</fullName>
        <label>Arkansas Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Entity_Type__c</fullName>
        <description>Click tools mapping</description>
        <label>Business Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CO - Corporation</fullName>
                </value>
                <value>
                    <fullName>GO - Government</fullName>
                </value>
                <value>
                    <fullName>LL - Limited Liability</fullName>
                </value>
                <value>
                    <fullName>SP - Sole proprietor</fullName>
                </value>
                <value>
                    <fullName>PA - Partnership</fullName>
                </value>
                <value>
                    <fullName>TR - Trusts</fullName>
                </value>
                <value>
                    <fullName>OT - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SST Onboardings</relationshipLabel>
        <relationshipName>SST_Onboardings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyCorporate_Address_Address_Line2__c</fullName>
        <label>Company Corporate Address: Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Address_Address_Line__c</fullName>
        <label>Company Corporate Address: Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Address_City__c</fullName>
        <label>Company Corporate Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Address_Country__c</fullName>
        <label>Company Corporate Address: Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US	United States</fullName>
                </value>
                <value>
                    <fullName>CA	Canada</fullName>
                </value>
                <value>
                    <fullName>AD	Andorra</fullName>
                </value>
                <value>
                    <fullName>AE	United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>AF	Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG	Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>AI	Anguilla</fullName>
                </value>
                <value>
                    <fullName>AL	Albania</fullName>
                </value>
                <value>
                    <fullName>AM	Armenia</fullName>
                </value>
                <value>
                    <fullName>AO	Angola</fullName>
                </value>
                <value>
                    <fullName>AQ	Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR	Argentina</fullName>
                </value>
                <value>
                    <fullName>AT	Austria</fullName>
                </value>
                <value>
                    <fullName>AU	Australia*</fullName>
                </value>
                <value>
                    <fullName>AW	Aruba</fullName>
                </value>
                <value>
                    <fullName>AX	Aland Islands</fullName>
                </value>
                <value>
                    <fullName>AZ	Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA	Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>BB	Barbados</fullName>
                </value>
                <value>
                    <fullName>BD	Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BE	Belgium</fullName>
                </value>
                <value>
                    <fullName>BF	Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG	Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BH	Bahrain</fullName>
                </value>
                <value>
                    <fullName>BI	Burundi</fullName>
                </value>
                <value>
                    <fullName>BJ	Benin</fullName>
                </value>
                <value>
                    <fullName>BL	Saint Barthélemy</fullName>
                </value>
                <value>
                    <fullName>BM	Bermuda</fullName>
                </value>
                <value>
                    <fullName>BN	Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>BO	Bolivia, Plurinational State of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Corporate_Address_State__c</fullName>
        <label>Company Corporate Address: State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Address_Zip_Code__c</fullName>
        <label>Company Corporate Address: Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Phone_Extension__c</fullName>
        <label>Company Corporate Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Corporate_Phone_Number__c</fullName>
        <label>Company Corporate Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_Address_1__c</fullName>
        <label>Company Mailing Address: Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_Address_2__c</fullName>
        <label>Company Mailing Address: Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_City__c</fullName>
        <label>Company Mailing Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_Country__c</fullName>
        <label>Company Mailing Address: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_State__c</fullName>
        <label>Company Mailing Address: State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Address_Zip_Code__c</fullName>
        <label>Company Mailing Address: Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Phone_Extension__c</fullName>
        <label>Company Mailing Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Mailing_Phone_Number__c</fullName>
        <label>Company Mailing Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <label>Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Extension__c</fullName>
        <label>Contact Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Business_Name__c</fullName>
        <description>Legal Characters: A-Z, a-z, 0-9, hash, hyphen, parentheses, ampersand, apostrophe and single space.
Illegal Character: leading space, trailing space, adjacent spaces, and other symbols.</description>
        <inlineHelpText>Name of Sellers Business (If different from Legal Name)</inlineHelpText>
        <label>DBA Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEINM__c</fullName>
        <label>FEIN</label>
        <length>18</length>
        <maskChar>X</maskChar>
        <maskType>nino</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <inlineHelpText>Do not allow FEIN with the first two digits of: 00, 07, 08, 09, 17, 18, 19, 28, 29, 49, 69, 70, 78, 79, 89, 96, 97.
Do not allow SSN or FEIN to equal “123456789”, “111111111”, “222222222”, “333333333”, “444444444”, “555555555”, “666666666”, “</inlineHelpText>
        <label>FEIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Georgia_Filing_Frequency__c</fullName>
        <label>Georgia Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Georgia_NV_Reason__c</fullName>
        <label>Georgia NV Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Georgia_Registered__c</fullName>
        <label>Georgia - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Georgia_Remote__c</fullName>
        <label>Georgia Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Georgia_SST_Volunteer__c</fullName>
        <label>Georgia SST Volunteer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IN_returns__c</fullName>
        <label>IN returns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Notified</fullName>
                </value>
                <value>
                    <fullName>.73%</fullName>
                </value>
                <value>
                    <fullName>.53%</fullName>
                </value>
                <value>
                    <fullName>.26%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indiana_Filing_Frequency__c</fullName>
        <label>Indiana Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indiana_Registered__c</fullName>
        <label>Indiana - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indiana_Remote__c</fullName>
        <label>Indiana Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indiana_nv_reason__c</fullName>
        <label>Indiana nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indiana_v__c</fullName>
        <label>Indiana v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduction_SST_program_Other__c</fullName>
        <label>Introduction SST program Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iowa_Filing_Frequency__c</fullName>
        <label>Iowa Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iowa_Registered__c</fullName>
        <label>Iowa - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iowa_Remote__c</fullName>
        <label>Iowa Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iowa_nv_reason__c</fullName>
        <label>Iowa nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Iowa_v__c</fullName>
        <label>Iowa v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_company_affiliated__c</fullName>
        <label>Is your company affiliated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kansas_Filing_Frequency__c</fullName>
        <label>Kansas Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kansas_Registered__c</fullName>
        <label>Kansas - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kansas_Remote__c</fullName>
        <label>Kansas Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kansas_V__c</fullName>
        <label>Kansas V</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kansas_nv_reason__c</fullName>
        <label>Kansas nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kentucky_Filing_Frequency__c</fullName>
        <label>Kentucky Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kentucky_Registered__c</fullName>
        <label>Kentucky - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kentucky_Remote__c</fullName>
        <label>Kentucky Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kentucky_nv_reason__c</fullName>
        <label>Kentucky nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kentucky_v__c</fullName>
        <label>Kentucky v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <inlineHelpText>Legal Characters: A-Z, a-z, 0-9, hash, hyphen, parentheses, ampersand, apostrophe and single space.
Illegal Character: leading space, trailing space, adjacent spaces, and other symbols.</inlineHelpText>
        <label>Legal Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Michigan_Filing_Frequency__c</fullName>
        <label>Michigan Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michigan_Registered__c</fullName>
        <label>Michigan - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michigan_Remote__c</fullName>
        <label>Michigan Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michigan_nv_reason__c</fullName>
        <label>Michigan nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Michigan_v__c</fullName>
        <label>Michigan v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minnesota_Filing_Frequency__c</fullName>
        <label>Minnesota Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minnesota_Registered__c</fullName>
        <label>Minnesota - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minnesota_Remote__c</fullName>
        <label>Minnesota Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minnesota_nv_reason__c</fullName>
        <label>Minnesota nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minnesota_v__c</fullName>
        <label>Minnesota v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebraska_Filing_Frequency__c</fullName>
        <label>Nebraska Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebraska_Registered__c</fullName>
        <label>Nebraska - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebraska_Remote__c</fullName>
        <label>Nebraska Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebraska_nv_reason__c</fullName>
        <label>Nebraska nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebraska_v__c</fullName>
        <label>Nebraska v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nevada_Filing_Frequency__c</fullName>
        <label>Nevada Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nevada_Registered__c</fullName>
        <label>Nevada - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nevada_Remote__c</fullName>
        <label>Nevada Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nevada_nv_reason__c</fullName>
        <label>Nevada nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nevada_v__c</fullName>
        <label>Nevada v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Jersey_Filing_Frequency__c</fullName>
        <label>New Jersey Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Jersey_Registered__c</fullName>
        <label>New Jersey - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Jersey_Remote__c</fullName>
        <label>New Jersey Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Jersey_nv_reason__c</fullName>
        <label>New Jersey nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Jersey_v__c</fullName>
        <label>New Jersey v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Carolina_Filing_Frequency__c</fullName>
        <label>North Carolina Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Carolina_Registered__c</fullName>
        <label>North Carolina - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Carolina_Remote__c</fullName>
        <label>North Carolina Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Carolina_nv_reason__c</fullName>
        <label>North Carolina nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Carolina_v__c</fullName>
        <label>North Carolina v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Dakota_Filing_Frequency__c</fullName>
        <label>North Dakota Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Dakota_Registered__c</fullName>
        <label>North Dakota - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Dakota_Remote__c</fullName>
        <label>North Dakota Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Dakota_nv_reason__c</fullName>
        <label>North Dakota nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>North_Dakota_v__c</fullName>
        <label>North Dakota v</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Volunteer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTState_of_Incorporation_or_Organization__c</fullName>
        <label>State of Incorporation or Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ohio_Filing_Frequency__c</fullName>
        <label>Ohio Filing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SSTFilingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ohio_Registered__c</fullName>
        <label>Ohio - Registered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Registered</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ohio_Remote__c</fullName>
        <label>Ohio Remote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Remote_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ohio_nv_reason__c</fullName>
        <label>Ohio nv reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SST_Non_Volunteer_Reason</valueSetName>
        </valueSet>
    </fields>
</CustomObject>